garde/tests/rules/snapshots/rules__rules__url__length__url_invalid.snap
---
source: garde/tests/./rules/url.rs
expression: snapshot
---
Struct {
    default: Url {
        scheme: "https",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "www.youtube.com",
            ),
        ),
        port: None,
        path: "/",
        query: None,
        fragment: None,
    },
    simple: Url {
        scheme: "https",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "www.youtube.com",
            ),
        ),
        port: None,
        path: "/",
        query: None,
        fragment: None,
    },
    bytes: Url {
        scheme: "https",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "www.youtube.com",
            ),
        ),
        port: None,
        path: "/",
        query: None,
        fragment: None,
    },
    chars: Url {
        scheme: "https",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "www.youtube.com",
            ),
        ),
        port: None,
        path: "/",
        query: None,
        fragment: None,
    },
    graphemes: Url {
        scheme: "https",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "www.youtube.com",
            ),
        ),
        port: None,
        path: "/",
        query: None,
        fragment: None,
    },
    utf_16_code_units: Url {
        scheme: "https",
        cannot_be_a_base: false,
        username: "",
        password: None,
        host: Some(
            Domain(
                "www.youtube.com",
            ),
        ),
        port: None,
        path: "/",
        query: None,
        fragment: None,
    },
}
bytes: length is lower than 30
chars: length is lower than 30
default: length is lower than 30
graphemes: length is lower than 30
simple: length is lower than 30
utf_16_code_units: length is lower than 30
